2005-01-05  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* term/svg.trm (SVG_init): Updated DOCTYPE name and reference to
	current standard: SVG 1.1. Added an XMLNS namespace declaration to
	satisfy requirements for XML documents.

2005-01-05  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/os2/gclient.c: Some more cleanup: Removed some unused variables
	and unused code which eliminates a lot of compiler warnings.

2005-01-04  Ethan Merritt  <merritt@u.washington.edu>

	* src/term.c src/term_api.h: Instead of exporting ignore_enhanced_text
	from term.c as a global TBOOLEAN, provide a wrapper routine
	ignore_enhanced(TBOOLEAN flag);

	* src/graphics.c (do_plot) src/graph3d.c (do_3dplot): Call new routine
	ignore_enhanced() rather than directly setting a variable inside term.c.

	* src/gadgets.h: Add TBOOLEAN noenhanced flag to label_struct.

	* docs/gnuplot.doc src/set.c (set_xyzlabel) src/save.c (save_set_all)
	src/show.c (show_xyzlabel): New suboption `set ... {{no}enhanced}` for
	plot title and axis labels, analogous to the noenhanced option for the
	plot key entries.  This allows, for example, using a filename with
	underscores as part of the plot title.

	* src/graphics.c (do_plot) src/graph3d (do_3dplot): Disable enhanced
	text processing while writing out plot title or axis label text if the
	noenhanced flag is set in the corresponding label_struct.

	* docs/gnuplot.doc: Correct the documentation to say
	'set multiplot layout <rows>,<cols>' (rows/cols were reversed in the
	previous version, and mis-described in the example).

2005-01-04  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/os2/gclient.c: Contains my attempt to implement pattern filling
	for the pm terminal. I gave this a bit of testing, but I have to admit
	that the result looks ugly together with the widelines option. But
	here you go anyway as 'widelines' has to be improved later anyway. It
	should work fine without 'widelines'...
