@@ -1,3 +1,11 @@
+2005-01-08  Harald Harders  <h.harders@tu-bs.de>
+
+	* src/color.c src/pm3d.c src/term.c src/term_api.h term/epslatex.trm
+	term/post.trm term/pslatex.trm: SF patch [ 1098249 ] "Rename
+	postscript_gpoutfile to gppsfile". This patch renames the handler
+	'FILE *postscript_gpoutfile' to 'gppsfile' since the old variable name
+	is too long for more often use.
+
 2005-01-05  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>
 
 	* term/svg.trm (SVG_init): Updated DOCTYPE name and reference to
